# orbiparam

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.macosx  MyMesh.hxx  Orbifold.hxx  Param.hxx  README.md  README.txt  ShortestPathDijkstra.hxx  ToMeshR.hxx  VertexPQ.hxx  data.txt  orbiparam-vs2017.sln  orbiparam-vs2017.vcxproj  orbiparam-vs2017.vcxproj.filters  orbiparam-vs2019.sln  orbiparam-vs2019.vcxproj  orbiparam-vs2022.sln  orbiparam-vs2022.vcxproj  orbiparam.bak  orbiparam.cxx  orbiparam.sln  orbiparam.vcxproj  orbiparam_bimba100K_x64_ao.bat  orbiparam_bimba1M_x64_ao.bat  param-vs2013.sln  param-vs2015.sln  param-vs2015.vcxproj  param-vs2015.vcxproj.filters  param.cxx  param.sln  param.vcxproj  param.vcxproj.filters  param_fixed.cxx  r05-path.txt  sp.cxx  sp.sln  sp.vcxproj  (+1 more)
cmake/: FindGLFW.cmake  FindOpenMesh.cmake
